# QualityScaler

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml  frontend-build-check.yml  install.yml  lint.yml  unit-tests.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  main.tsx  mockApi.ts  types.ts  util.ts  ws.ts  wsMessages.ts
frontend/src/components/: App.tsx  ConsolePanel.tsx  FileList.tsx  InfoModal.tsx  MessageBar.tsx  ModePanel.tsx  OptionRow.tsx
frontend/src/styles/: app.css
frontend/tests/: api.test.ts  util.test.ts  wsMessages.test.ts
src/qualityscaler/: QualityScaler.py  cli.py  cli_runtime.py  requirements.runtime.lock.txt  runtime_wheel.py
src/qualityscaler/_vendor/: __init__.py
src/qualityscaler/_vendor/iso_env/: api.py  run.py  types.py  util.py
src/qualityscaler/app/: __init__.py  assets.py  console_log.py  constants.py  events.py  ff_constants.py  ff_info_texts.py  ff_preferences.py  ff_state.py  media_info.py  preferences.py  state.py
src/qualityscaler/app/controllers/: __init__.py  framegen.py  upscale.py
src/qualityscaler/app/workers/: __init__.py  framegen.py  upscale.py
src/qualityscaler/core/: __init__.py  ai.py  encoding.py  events.py  job.py  media.py  models.py  pipeline.py  proc.py  settings.py  version.py
src/qualityscaler/fluidframes/: __init__.py  ai.py  job.py  models.py  pipeline.py  settings.py
src/qualityscaler/gui/: __init__.py  __main__.py  app.py  assets.py  console_log.py  console_widget.py  constants.py  controller.py  ff_constants.py  ff_controller.py  ff_info_texts.py  ff_panel.py  ff_preferences.py  ff_state.py  ff_worker.py  file_chooser.py  info_texts.py  media_info.py  preferences.py  state.py  widgets.py  worker.py
src/qualityscaler/webview/: __init__.py  __main__.py  host.py  js_api.py  ws.py
src/qualityscaler/webview/assets/: index.html
src/qualityscaler/webview/assets/assets/: index-6jr35npF.js  index-BioD-QZQ.js  index-rzs8hyQd.css
tests/: test_app_events.py  test_app_layout_source.py  test_app_no_tkinter_imports.py  test_cli.py  test_cli_runtime.py  test_core_encoding.py  test_core_events.py  test_core_job.py  test_core_models.py  test_core_proc.py  test_core_settings.py  test_fluidframes_job.py  test_fluidframes_pipeline.py  test_fluidframes_settings.py  test_gui_console_log.py  test_gui_controller.py  test_gui_ff_controller.py  test_gui_ff_preferences.py  test_gui_ff_state.py  test_gui_file_chooser.py  test_gui_media_info.py  test_gui_preferences.py  test_gui_rewire_source.py  test_gui_state.py  test_integration_install.py  test_packaging.py  test_qualityscaler_gui_source.py  test_runtime_wheel.py  test_webview_api.py  test_webview_host.py  test_webview_ws.py
