[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "quality_scaler"
description = "upscales images using ai"
requires-python = ">=3.10"
keywords = ["qualityscaler", "upscale", "ai", "directml"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "filelock>=3.13.0",
    "uv>=0.6.4",
]
version = "4.4.0"

[tool.setuptools.package-data]
qualityscaler = ["requirements.runtime.lock.txt"]
"qualityscaler._vendor.iso_env" = ["LICENSE", "assets/example.txt"]


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
quality-scaler = "qualityscaler.cli:main"
qualityscaler = "qualityscaler.cli:main"
